[package]
name = "graph-messages"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson = "0.7.0"
pbjson-types = "0.7.0"
prost = "0.13.1"
serde = "1.0.209"
tonic = "0.12.2"

[build-dependencies]
pbjson-build = "0.7.0"
tonic-build = "0.12.2"

[dev-dependencies]
expect-test = "1.5.0"
serde_json = "1.0.127"
