[package]
name = "graph-messages"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson = "0.9.0"
pbjson-types = "0.9.0"
prost = "0.14.3"
serde = "1.0.228"
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
pbjson-build = "0.9.0"
tonic-prost-build = "0.14.5"

[dev-dependencies]
expect-test = "1.5.1"
serde_json = "1.0.149"
