<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello</name>
  <version>0.0.0</version>
  <description>Hello, World!</description>
  <maintainer email="christian@xronos.com">Christian Menard</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
</package>
